# cyferio-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  UPGRADE.md  constants.toml  cyferio_rollup_config.toml  rollup_config.toml  sov-rollup-starter.sh
.github/workflows/: rust.yml
automation/roles/data-availability/celestia/defaults/testnet/: variables.yaml
automation/roles/rollup/defaults/mainnet/: variables.yaml
automation/roles/rollup/defaults/testnet/: variables.yaml
automation/roles/rollup/files/genesis/: bank.json
automation/roles/rollup/tasks/: genesis.yaml
automation/roles/rollup/templates/celestia/: rollup_config.toml.j2
automation/roles/rollup/templates/genesis/: attester_incentives.json.j2  chain_state.json.j2  prover_incentives.json.j2  sequencer_registry.json.j2
automation/roles/rollup/templates/mock/: rollup_config.toml.j2
benchmarks/: log_20241219.txt
crates/: chain_hash.autogenerated.rs
crates/confidential-token/: Cargo.toml  README.md  openapi-v3.yaml
crates/confidential-token/src/: call.rs  event.rs  fhe_key.rs  genesis.rs  lib.rs  mock_decryption.rs  query.rs  token.rs  utils.rs
crates/cyferio/: Cargo.toml
crates/cyferio/src/: fee.rs  service.rs  validity_condition.rs  verifier.rs
crates/cyferio/src/spec/: address.rs  block.rs  hash.rs  header.rs  mod.rs
crates/example-module/src/: lib.rs
crates/example-module/tests/: example_module.rs
crates/provers/risc0/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/provers/sp1/: build.rs
crates/provers/sp1/guest-mock/: Cargo.toml
crates/rollup/: Cargo.toml  Makefile  build.rs
crates/rollup/src/: cyferio_rollup.rs  cyferio_rollup_1.rs  mock_rollup.rs
crates/rollup/tests/: test_helpers.rs
crates/rollup/tests/bank/: mod.rs
crates/stf/: Cargo.toml
crates/stf/src/: authentication.rs  genesis_config.rs  hooks.rs  lib.rs  runtime.rs
scripts/: update_rev.sh
test-data/genesis/cyferio/: bank.json  chain_state.json  sequencer_registry.json
test-data/genesis/mock/: bank.json  sequencer_registry.json
test-data/keys/: private_key.json
test-data/requests/fhe/: create_token.json  mint.json  mint_multi.json  transfer.json
